# Proxer

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  package.json
.github/: FUNDING.yml
.github/workflows/: release.yaml
assets/: README.md
assets/screenshots/: README.md
docs/: README.md  api.md  architecture.md  configuration.md  development.md  release.md  troubleshooting.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: app-overlays.tsx  app-sidebar.tsx  detail-panel.tsx  http-history-table.tsx  runtime-logger.tsx  top-bar.tsx  workspace-views.tsx
frontend/components/ui/: resizable.tsx  scroll-area.tsx  sonner.tsx  textarea.tsx
frontend/lib/: diff.ts  nav-items.ts  overlays.ts  proxer.ts  theme.ts  typography.ts  update-check.ts
scripts/: build-unix.sh  build-windows.bat
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_leaks.rs  app_state.rs  attack_surface.rs  commands.rs  dashboard.rs  error.rs  events.rs  extensions.rs  fingerprint.rs  http_types.rs  intercept.rs  intruder.rs  logs.rs  main.rs  mcp.rs  project.rs  scanner.rs  settings.rs  sitemap.rs  system_proxy.rs  ui.rs
src-tauri/src/proxy/: mod.rs
src-tauri/src/rules/: mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/tls/: mod.rs
