[package]
name = "proxer"
version = "1.0.3"
edition = "2021"
default-run = "proxer"

[dependencies]
tauri = { version = "2", features = [] }

tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "fs", "sync", "io-std"] }
futures = "0.3"

hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
http = "1"
bytes = "1"

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate", "stream", "socks"] }
primp = { version = "1.3.1", features = ["socks"] }
url = "2"

tokio-rustls = "0.26"
tokio-socks = "0.5"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
webpki-roots = "0.26"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
base64 = "0.22"
rustls-pemfile = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
sysinfo = "0.33"
pem = "3"
dashmap = "6"
cookie = "0.18"
time = { version = "0.3", features = ["formatting"] }
regex = "1"
rfd = "0.15"
sha1 = "0.10"

sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "uuid"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Networking_WinInet"] }
